# File

./: .gitignore  CMakeLists.txt  README.MD
data/: gresource.xml  image_window.ui  popup.ui  window.ui
src/: application.cpp  application.hpp  application_launcher.cpp  application_launcher.hpp  appwindow.cpp  appwindow.hpp  ex_fun.cpp  ex_fun.hpp  file_attribute.cpp  file_attribute.hpp  file_list.cpp  file_list.hpp  image_window.cpp  image_window.hpp  main.cpp
